# gourd_led_controller

./: .gitignore
led_controller/: .gitignore  Pipfile  README.md  led_controller.ino  platformio.ini  serial_relay.py  setup.sh
led_controller/examples/: main_hardware_id.cpp
led_controller/include/: config.h  hardware_id.h  pins_teensy_a.h  pins_teensy_b.h  pins_teensy_c.h
led_controller/raspberry_pi/: README.md  __init__.py  config.py  device_utils.py  dual_teensy.py  identify_teensys.py  protocol.py  pyproject.toml  requirements.txt  run.py  run_test  test_individual_strips.py  test_teensy_a_only.py  test_teensy_communication.py
led_controller/raspberry_pi/sound/: README.md  __init__.py  asound.conf  main.py  pyproject.toml  start.sh  whalesong.service
led_controller/raspberry_pi/sound/communication/: monitor_teensy.py
led_controller/raspberry_pi/test/: __init__.py  simple_button_test.py  simple_pulse_strips.py  test_both_teensys.py  test_individual_strips.py  test_led_effects.py  test_ring_leds.py  test_teensy_a_only.py  test_teensy_b_leds.py  test_teensy_communication.py
led_controller/raspberry_pi/utils/: __init__.py  config.py  device_utils.py  dual_teensy.py  protocol.py
led_controller/src/: buttons.cpp  buttons.h  eyes.cpp  eyes.h  led_strips.cpp  led_strips.h  main.cpp  pins.h
led_controller/src/input_devices/: button_leds.cpp  button_leds.h  buttons.cpp  buttons.h
led_controller/src/led_controllers/: effects.cpp  effects.h  octo_led_strips.cpp  octo_led_strips.h
led_controller/src/shared/: communication.cpp  communication.h  hardware_id.cpp
led_controller/src/teensy_a/: eyes.cpp  eyes.h  teensy_a_specific.cpp  teensy_a_specific.h
led_controller/src/teensy_b/: teensy_b_specific.cpp  teensy_b_specific.h
led_controller/src/teensy_c/: teensy_c_specific.cpp  teensy_c_specific.h
